# ab-characterisation

./: .gitignore  README.md  environment.yml  setup.cfg
src/ab_characterisation/: cli.py  filter_steps.py  pipeline_orchestration.py  rosetta_steps.py  sequence_steps.py  structure_steps.py
src/ab_characterisation/developability_tools/sequence_liabilities/: definitions.py  main.py  outputs.py  scanner_classes.py  scanners.py
src/ab_characterisation/developability_tools/sequence_properties/: calculations.py  main.py  outputs.py
src/ab_characterisation/developability_tools/tap/: definitions.py  main.py  outputs.py  structure_annotation.py
src/ab_characterisation/developability_tools/tap/metrics/: __init__.py  base_calculator.py  hydrophobic_patches.py  negative_patches.py  positive_patches.py  sfvcsp.py  total_cdr_length.py
src/ab_characterisation/developability_tools/utils/: input_handling.py  outputs.py
src/ab_characterisation/utils/: anarci_region_definition_utils.py  anarci_utils.py  chimerax_utils.py  data_classes.py  rosetta_utils.py
src/ab_characterisation/utils/rosetta_templates/: rosetta_metrics_ab_only.sh  rosetta_metrics_ab_only.xml  rosetta_metrics_complex.sh  rosetta_metrics_complex.xml
tests/data/: test_pipeline.csv
tests/integration/: chimera_test_script.py  test_pipeline.py
