[metadata]
name = ab-characterisation
description = AB-characterisation
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Typing :: Typed

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >= 3.10
include_package_data = True
install_requires =
    ImmuneBuilder

[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    ab-characterisation = ab_characterisation.cli:app
